styles/styles.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

:root {
  font-size: 12px;
  font-family: Arial, Helvetica, sans-serif;

  /* =================================
  SECTION : gloabls variables
  ================================= */

  --gloabal-spacing: 15px;
  --input-border-radius: 4px;
  --button-border-radius: 4px;
  --focus-color: #213da2;
  --stars-color: rgb(247, 190, 46);

  /* =================================
  SECTION :  Theme Light
  ================================= */
  --primary-color: #e67f21;
  --background-grey: #f9f9f9;
  --background-color: #ffff;

  --button-background-color: var(--primary-color);
  --button-hover-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  --input-background-color: #fff;
  --text-color: #636363;
  --text-color-sections: #c58146;
  --burger-color: #000;

  --card-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  --card-background-color: #fff;

  --tag-color-category: var(--primary-color);
  --tag-color-duration: #2ccb73;
  --tag-color-level: #3796db;

  --star-background-color: #000;
  --spacer-color: #e8e8e8;
}

/* =================================
  SECTION :  Theme dark
  ================================= */
.dark {
  --primary-color: #e67f21;

  --background-color: #1a1b20;
  --background-grey: #21232a;

  --button-background-color: var(--primary-color);
  --button-hover-shadow:
    0 4px 12px rgba(0, 0, 0, 0.6), 0 0 0 1px rgba(230, 127, 33, 0.4);
  --input-background-color: #292b33;
  --burger-color: #fff;

  --text-color: #e0e0e0;
  --text-color-sections: #f0a15c;

  --card-box-shadow: rgba(0, 0, 0, 0.6) 0px 4px 12px;
  --card-background-color: #1f2128;

  --tag-color-category: var(--primary-color);
  --tag-color-duration: #2ccb73;
  --tag-color-level: #4aa3e0;

  --star-background-color: #717171;

  --spacer-color: #2a2a2a;
}

body {
  background-color: var(--background-color);
}

main {
  padding: 0 var(--gloabal-spacing);
}

ul,
ol {
  list-style: none;
}

button,
.buttonlink {
  border: none;
  outline: none;

  cursor: pointer;
  padding: 5px;

  text-align: center;
  text-decoration: none;

  &.primary {
    background-color: var(--primary-color);
    color: white;
    font-size: 1rem;
    border-radius: var(--button-border-radius);
    padding: 10px;
  }

  &:hover {
    transition:
      box-shadow 200ms ease,
      transform 200ms ease;
    box-shadow: var(--button-hover-shadow);
    transform: translateY(-1px);
  }
}

input,
textarea {
  padding: 10px;
  border: 1px var(--spacer-color) solid;
  border-radius: var(--input-border-radius);
  background-color: var(--input-background-color);
  color: var(--text-color);
}

input,
textarea,
button,
a {
  outline: none;
  &:focus-visible {
    box-shadow:
      0 0 0 2px var(--background-color),
      0 0 0 4px var(--focus-color);
  }
}
/* =================================
SECTION : COMMON CLASSES
================================= */
.stars {
  color: var(--star-background-color);
  .active {
    color: var(--stars-color);
  }
}
.tag {
  padding: 6px 8px;
  color: white;
  font-size: 0.9rem;
  border-radius: 25px;
  &.category {
    background-color: var(--tag-color-category);
  }

  &.level {
    background-color: var(--tag-color-level);
  }

  &.duration {
    background-color: var(--tag-color-duration);
  }
}

.tags-list {
  display: flex;
  align-items: center;
  justify-content: space-between;
  ul {
    display: flex;
    flex-direction: row;
    gap: 5px;
  }
}

.card {
  box-shadow: var(--card-box-shadow);
  border-radius: 6px;
  border: none;
  background-color: var(--card-background-color);
}

.no-hover:hover {
  transform: unset;
  box-shadow: unset;
}
/* =================================
SECTION : HEADER
================================= */

.main-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: var(--gloabal-spacing);

  box-shadow: var(--card-box-shadow);
  border-radius: 0 0 4px 4px;
  margin-bottom: var(--gloabal-spacing);
  background-color: var(--background-color);
  h1 {
    font-size: 1.5rem;
  }
}

.site-logo-container {
  display: flex;
  gap: 10px;
  align-items: center;
  font-weight: bold;
  font-size: 1.5rem;
  color: var(--text-color);
  text-decoration: none;
  color: var(--primary-color);
  .site-logo {
    width: 28px;
    height: 28px;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    background-color: var(--primary-color);
    border-radius: 50%;
    text-align: center;
    p {
      font-size: 1rem;
      font-weight: 400;
    }
  }
}

.main-nav {
  z-index: 1000;
  background-color: rgba(0, 0, 0, 0.895);
  position: fixed;
  text-align: center;
  padding-top: 70px;
  top: 0;
  left: 0;
  border: none;
  width: 100vw;
  height: 100dvh;
  .btn-close-menu {
    position: absolute;
    cursor: pointer;
    top: 10px;
    right: 25px;
    background-color: transparent;
    color: white;
    font-size: 2.5rem;
  }
  ul {
    display: flex;
    flex-direction: column;
    gap: calc(2 * var(--gloabal-spacing));

    a {
      font-weight: 600;
      color: white;
      text-decoration: none;
      font-size: 2rem;
    }
  }
  &.hidden {
    display: none;
  }
}

.header-buttons {
  display: flex;
  align-items: center;
  gap: 10px;
  justify-self: end;
}

#display-mod {
  border-radius: 50%;
  padding: 5px 7px;
  font-size: 0.9rem;
}

#burger-btn {
  padding: 0;
  width: 26px;
  height: 23px;
  background-color: transparent;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  span {
    background-color: var(--burger-color);
    height: 3px;
    border-radius: 2px;
  }
}

/* =================================
SECTION : SEARCH & FILTER SECTION
================================= */

.search-container {
  padding: var(--gloabal-spacing) calc(2 * var(--gloabal-spacing));
}

.search-input-container {
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.filter-box {
  padding: var(--gloabal-spacing);
  border: none;
  background-color: var(--background-grey);
  legend {
    padding-top: 30px;
    font-weight: bold;
    color: var(--text-color);
  }
  ul {
    display: flex;
    flex-direction: column;
    gap: var(--gloabal-spacing);
    label {
      display: flex;
      flex-direction: row;
      align-items: center;
      gap: 5px;
      color: var(--text-color);
    }
  }
}

/* =================================
SECTION : RECIPES
================================= */
#recipes-section {
  margin-top: 30px;
}

.recipes-container {
  margin-top: var(--gloabal-spacing);
  display: grid;
  gap: var(--gloabal-spacing);
}

.recipe {
  overflow: hidden;
  position: relative;

  > img {
    width: 100%;
    height: 250px;
    object-fit: cover;
  }
  h2 {
    font-size: 1.2rem;
    color: var(--text-color);
  }

  /* &:hover {
    transition: transform 200ms ease;
    transform: translateY(-1px);
    box-shadow: var(--button-hover-shadow);
  } */
}

.favorite {
  border: white;
  cursor: pointer;
  border-radius: 50px;
  position: absolute;
  right: 15px;
  top: 15px;
  height: 24px;
  width: 24px;
  background-color: rgb(222, 222, 222);
  &.is-favorite {
    background-color: red;
  }
  padding: 0;
  img {
    transform: scale(1.1);
    /* Permet de masquer le liseré rouge visible autour quand favoris activé*/
  }
}

.recipe-content {
  padding: var(--gloabal-spacing);
  display: flex;
  flex-direction: column;
  gap: var(--gloabal-spacing);
  button {
    padding: 10px;
  }
}

.show-recipe-link {
  background-color: var(--primary-color);
  color: white;
  padding: 10px;
  border-radius: var(--button-border-radius);
  text-align: center;
  text-decoration: none;
  &:hover {
    transition:
      box-shadow 200ms ease,
      transform 200ms ease;
    box-shadow: var(--button-hover-shadow);
    transform: translateY(-1px);
  }
}

/* =================================
SECTION : FOOTER
================================= */

#footer-section {
  margin: 50px 0px;
  padding: var(--gloabal-spacing) 0;
  border-top: 2px var(--spacer-color) solid;
}

.footer-container {
  padding: var(--gloabal-spacing);
  display: flex;
  flex-direction: column;
  gap: var(--gloabal-spacing);
  text-align: center;
  p {
    font-size: 1rem;
    color: var(--text-color);
    text-decoration: none;
  }
  p:nth-child(1) {
    color: var(--primary-color);
    font-size: 1.3rem;
  }
  ul {
    display: flex;
    flex-direction: column;
    gap: calc(var(--gloabal-spacing) / 2);
    a {
      font-size: 1rem;
      color: var(--text-color);
      text-decoration: none;
    }
  }
}

/* =================================
SECTION : Media query tablette
================================= */

@media (min-width: 768px) {
  .recipes-container {
    grid-template-columns: 1fr 1fr;
    gap: calc(1.5 * var(--gloabal-spacing));
  }

  .search-input-container {
    display: grid;
    grid-template-columns: 1fr 150px;
    gap: 0;
    input {
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
      border-right: none;
    }
    button {
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
    }
  }

  .filter-box {
    ul {
      flex-direction: row;
    }
  }
  #footer-section {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }
  .footer-container {
    text-align: left;
    max-width: 50%;
  }
}

/* =================================
SECTION : Media query desktop
================================= */

@media (min-width: 1024px) {
  main {
    max-width: 1024px;
    margin: 0 auto;
  }

  .main-header {
    width: 100%;
    display: grid;
    grid-template-columns: 200px 1fr 200px;
  }
  #footer-section {
    padding: 0 calc((100vw - 1024px) / 2);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  .recipes-container {
    grid-template-columns: repeat(3, 1fr);
    gap: calc(1.5 * var(--gloabal-spacing));
  }

  #btn-close-menu {
    display: none;
  }

  .main-nav {
    position: static;
    display: block;
    justify-self: center;
    width: unset;
    height: unset;
    padding-top: unset;
    background-color: transparent;

    &.hidden {
      display: unset;
    }

    ul {
      display: flex;
      flex-direction: row;
      gap: var(--gloabal-spacing);
      align-items: center;
      li {
        padding: 15px;
      }

      a {
        font-weight: 600;
        color: var(--text-color);
        text-decoration: none;
        font-size: 1rem;
      }
      .active-page {
        background-color: var(--background-grey);
        border-radius: var(--button-border-radius);
        a {
          color: var(--primary-color);
        }
      }
    }
  }
  #burger-btn {
    display: none;
  }

  .filter-box {
    ul {
      flex-direction: column;
    }
  }

  .filters-container {
    display: flex;
    gap: var(--gloabal-spacing);
  }
  .filter-box {
    min-width: 200px;
  }
}

